--- a/index.html
+++ b/index.html
@@ -10,3 +10,51 @@
     <script>apistore()</script></center>
 <center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
     <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
+<center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
+    <script>apistore()</script></center>
