--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>嘿嘿嘿，鸡汤来喽..</title>
+<meta name="description" content="毒鸡汤">
 <center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
     <script>apistore()</script></center>
 <center><script type="text/javascript" src="https://apis.jxcxin.cn/api/yiyan?type=js"></script>
